# deep

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  conanfile.txt  project_options.cmake
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  StaticAnalyzers.cmake  compiler_warnings.cmake  standard_project_settings.cmake  vc_environment.cmake
cmake/toolchains/: clang.cmake
conan/: settings.yml
conan/profiles/: gcc14  llvm19
docker/: Dockerfile
executable/: CMakeLists.txt  deep.cpp  deep_exe.cpp  main.cpp
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
libraries/: CMakeLists.txt
libraries/context/: CMakeLists.txt
libraries/context/include/context/: glfw_context.h
libraries/core/: CMakeLists.txt
libraries/core/math/: CMakeLists.txt
libraries/core/math/include/math/: math.cpp  matrix.h  vector.h
libraries/core/math/src/: vector.cpp
libraries/core/memory/: CMakeLists.txt
libraries/core/memory/include/memory/: alignment.h  memory_distributor.h  stack_allocator.h
libraries/core/memory/src/: global_memory_overrides.cpp  memory_distributor.cpp  stack_allocator.cpp
libraries/deep/: CMakeLists.txt  deep.cpp  deep.h
libraries/deep/include/deep/: deep.h
libraries/deep/src/: deep.cpp
libraries/events/: CMakeLists.txt
libraries/events/include/events/: event.h  event_dispatcher.h  event_t.h  events.h  signal.h  window_resized_event.h
libraries/imgui/: CMakeLists.txt
libraries/imgui/include/imgui/: imgui_layer.h
libraries/imgui/src/: imgui_layer.cpp
libraries/layer/: CMakeLists.txt
libraries/layer/include/layer/: layer.h  layer_stack.h  layer_t.h
libraries/layer/src/: layer.cpp  layer_stack.cpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/logger/: logger.h  logger_t.h  spd_logger.h  spdlog_logger.h  stdout_logger.h
libraries/logger/src/: spd_logger.cpp  spdlog_logger.cpp  stdout_logger.cpp
libraries/math/: CMakeLists.txt
libraries/math/include/math/: matrix.h
libraries/shader/: CMakeLists.txt
libraries/shader/include/program/: opengl_program.h
libraries/shader/include/shader/: opengl_program.h  opengl_shader.h
libraries/shader/private/shader/: opengl_shader.h
libraries/shader/src/: opengl_program.cpp  opengl_shader.cpp
libraries/texture/: CMakeLists.txt
libraries/texture/include/texture/: opengl_texture.h
libraries/texture/src/: opengl_texture.cpp
libraries/types/: CMakeLists.txt
libraries/types/include/types/: deep_concepts.h  deep_keycodes.h  deep_literals.h  deep_types.h
libraries/vulkan/: CMakeLists.txt
libraries/vulkan/include/deep/: vulkan.h
libraries/vulkan/include/vulkan/: vulkan_api.h
libraries/vulkan/src/: vulkan.cpp  vulkan_api.cpp
libraries/window/: CMakeLists.txt
libraries/window/include/window/: glfw_window.h  window.h  window_t.h
libraries/window/src/: glfw_window.cpp
resources/shaders/: hello_triangle.h
test/: CMakeLists.txt  tests.cpp  ut_stack_allocator.cpp
tests/: CMakeLists.txt  layer_stack_test.cpp  tests.cpp
