find_package(fmt)
find_package(spdlog)
find_package(docopt)
find_package(glfw3 REQUIRED)
find_package(glad REQUIRED)
find_package(namedtype REQUIRED)
find_package(stb REQUIRED)

add_subdirectory(shader)
add_subdirectory(texture)
add_subdirectory(types)
add_subdirectory(math)
add_subdirectory(context)
add_subdirectory(window)
add_subdirectory(deep)
add_subdirectory(logger)
add_subdirectory(events)
add_subdirectory(layer)
